Bugfix overflow of columns

--- a/src/style.less
+++ b/src/style.less
@@ -38,17 +38,19 @@ body {
     background-color: @dark-gray1;
 }
 
-#second-container {
+#right-container {
     flex-grow: 1;
     flex-basis: 80%;
 
     max-width: 80%;
 
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: flex-start;
-
     padding: @window-padding;
+}
+
+#input-columns-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 #input-columns-viewer {
@@ -80,8 +82,8 @@ body {
 }
 
 #column-selector {
-    flex-grow: 3;
-    flex-basis: 80%;
+    flex-grow: 1;
+    overflow: auto;
 
     background-color: @dark-gray2;
 
@@ -95,19 +97,25 @@ body {
         .bp3-tab-panel:not([aria-hidden="true"]) {
             flex-grow: 1;
             display: flex;
+            overflow: auto;
             flex-direction: column;
 
             .vertical-flex {
                 width: 100%;
                 flex-grow: 1;
                 display: flex;
+                overflow: auto;
                 flex-direction: column;
 
                 .column-viewer {
                     flex-grow: 1;
+                    overflow: auto;
 
                     .column-flexbox {
+                        overflow: auto;
+                        min-height: -moz-min-content;
                         height: 100%;
+                        overflow-x: scroll;
                     }
                 }
             }
@@ -121,7 +129,7 @@ body {
         padding: 5px;
 
         & > * {
-            flex-grow: 2;
+            flex-grow: 1;
 
             color: @white;
             text-align: center;
@@ -157,7 +165,6 @@ body {
     .row {
         display: flex;
         align-items: center;
-        // justify-content: space-between;
         margin-bottom: 10px;
 
         & > *:not(:last-child) {
@@ -176,6 +183,7 @@ body {
 
 .column-viewer {
     padding: @window-padding;
+    overflow: auto;
 
     .column-flexbox {
         background-color: @dark-gray1;
@@ -197,14 +205,17 @@ body {
             position: relative;
             left: 140px;
             top: -10px;
-            z-index: 2;
+            z-index: 3;
             background-color: @dark-gray5;
             color: @light-gray1;
             border-radius: 3px;
 
-
             & > * {
                 margin-top: 1px;
+            }
+
+            &:hover {
+                background-color: @blue1;
             }
         }
 
@@ -217,16 +228,21 @@ body {
             min-width: 150px;
             background-color: @white;
             border-radius: @border-radius;
-            overflow: hidden;
+            overflow-y: scroll;
             padding-bottom: 10px;
 
             .column-header {
+                position: sticky;
+                top: 0;
                 background-color: @light-gray3;
                 text-align: center;
                 padding: 0px 0px;
+                z-index: 2;
 
                 & > * {
                     padding: 2px 0px;
+                    height: 22px;
+                    box-sizing: border-box;
                 }
 
                 & > *:not(:last-child) {
@@ -234,9 +250,13 @@ body {
                 }
             }
 
-            .column-rows > * {
-                padding: 2px 10px;
-                border-bottom: 1px solid @light-gray3;
+            .column-rows {
+                height: calc(100% - 66px);
+
+                & > * {
+                    padding: 2px 10px;
+                    border-bottom: 1px solid @light-gray3;
+                }
             }
         }
     }
